@@ -193,8 +193,8 @@ Line3d
 ViewVolume::projectLine (const Line3d & line, const Matrix4d & modelview, const Matrix4d & projection, const Vector4i & viewport)
 throw (std::domain_error)
 {
-	auto point1 = ViewVolume::projectPoint (line .point (),                                   modelview, projection, viewport);
-	auto point2 = ViewVolume::projectPoint (line .point () + line .direction () * 10000000.0, modelview, projection, viewport);
+	auto point1 = ViewVolume::projectPoint (line .point (),                                     modelview, projection, viewport);
+	auto point2 = ViewVolume::projectPoint (line .point () + line .direction () * 1000000000.0, modelview, projection, viewport);
 
 	point1 .z (0);
 	point2 .z (0);
