@@ -1,3 +1,7 @@
+2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* main.cpp: 
+
 2013-10-19  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* main.cpp: 
