@@ -1,5 +1,14 @@
 2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* ViewVolume.cpp:
+	* TransformHandle.wrl:
+	* SphereSensor.h:
+	* CylinderSensor.h:
+	* SphereSensor.cpp:
+	* CylinderSensor.cpp: 
+
+2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* TransformHandle.wrl:
 	* X3DShapeNode.cpp:
 	* BrowserOptions.cpp:
